After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763134 - file-undo-manager: fix trash undo invalidation
file-undo-manager: fix trash undo invalidation
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-05 11:44 UTC by Razvan Chitu
Modified: 2016-03-07 20:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-undo-manager: fix trash undo invalidation (1.53 KB, patch)
2016-03-05 11:44 UTC, Razvan Chitu
committed Details | Review

Description Razvan Chitu 2016-03-05 11:44:26 UTC
See patch.
Comment 1 Razvan Chitu 2016-03-05 11:44:45 UTC
Created attachment 323146 [details] [review]
file-undo-manager: fix trash undo invalidation

In Nautilus, when the Trash is emptied, trash undo / redo operations are
invalidated by the undo manager. However, only the undo operations should be
invalidated, because a redo is not affected by the state of the Trash. In order
to fix this, change the invalidation condition to only target undo.
Comment 2 Carlos Soriano 2016-03-07 16:29:07 UTC
Review of attachment 323146 [details] [review]:

hm tricky, wonder if we could explain it better in the commit message.
It's fine as it is, so LGTM, thanks!
Comment 3 Carlos Soriano 2016-03-07 20:11:05 UTC
Attachment 323146 [details] pushed as 2a9b83e - file-undo-manager: fix trash undo invalidation